---
title: E-commerce data models
---

erDiagram
    Users {
        number id pk
        string name "UQ"
        string email "UQ"
        string password "Should be hashed"
    }

    Categories {
        number id pk
        number parent_id fk
        string name
        string description
    }

    CategoriesImages {
        number category_id fk
        string url
        string mimetype
    }

    Products {
        number id pk
        number category_id fk
        string name
        string description
        number price
    }

    ProductsItems {
        number id pk
        number product_id fk
        string color
        string size
        number price
        number quantity
    }

    ProductItemsImages {
        number products_items_id fk
        string url
        string mimetype
    }

    Carts {
        number id pk
        number user_id fk
    }

    CartItems {
        number id pk
        number cart_id fk
        number product_item_id fk
        number quantity
    }

    Orders {
        number id pk
        number user_id fk
        number total
        string status
    }

    OrderItems {
        number id pk
        number order_id fk
        number product_item_id fk
        number quantity fk
        number unitary_price_at_purchase
        number price_at_purchace
    }

    Products ||..|{ ProductsItems: contains
    Products }|..|| Categories: belongs_to
    Categories }o..o| Categories: parent_category
    Categories ||--o| CategoriesImages: display
    Users ||--|| Carts: has
    Carts ||..|{ CartItems: includes
    CartItems ||..o{ ProductsItems: attached
    Users ||..|| Orders: has
    Orders ||..|{ OrderItems: includes
    OrderItems ||..o{ ProductsItems: attched
    ProductsItems |o--o{ ProductItemsImages: images